--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "deploy": "^1.0.3",
     "jquery": "^3.3.1",
     "react": "^16.8.4",
+    "react-async-script-loader": "^0.3.0",
     "react-circular-progressbar": "^1.1.0",
     "react-dom": "^16.8.4",
     "react-redux": "^7.0.2",
@@ -22,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "script/deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
